--- a/public/style.css
+++ b/public/style.css
@@ -32,3 +32,23 @@ body, html {
 #canvas { 
     position:fixed;
 }
+
+#navigation {
+    position: fixed;
+    display: flex;
+    left: 10px;
+    bottom: 10px;
+}
+
+.navigationIcon{
+    color: white;
+    border: 1px solid white;
+    padding: 4px 8px 4px 8px;
+    margin: 4px;
+}
+
+.info {
+    color: white;
+    position: relative;
+    top: 10px;
+}
