--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -29,8 +30,8 @@ body, html {
     font-family: 'Courier New', Courier, monospace;
 }
 
-#canvas { 
-    position:fixed;
+#canvas {
+    position: fixed;
 }
 
 #navigation {
@@ -40,15 +41,24 @@ body, html {
     bottom: 10px;
 }
 
-.navigationIcon{
+.navigationIcon {
     color: white;
+    text-shadow:
+        1px 1px 2px black,
+        0 0 1em #FC0,
+        0 0 0.2em #FC0;
     border: 1px solid white;
+    box-shadow: 1px 1px 1px #FC0;
     padding: 4px 8px 4px 8px;
     margin: 4px;
 }
 
 .info {
     color: white;
+    text-shadow:
+        1px 1px 2px black,
+        0 0 1em #FC0,
+        0 0 0.2em #FC0;
     position: relative;
     top: 10px;
 }
