--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,10 @@ html {
     margin: 4px;
 }
 
+.navigationIcon.active {
+    border-width: 3px;
+}
+
 .info {
     color: white;
     text-shadow:
